Moves all gRPC annotations to a new API package.
Signed-off-by: Santiago Pericas-Geertsen <santiago.pericasgeertsen@oracle.com>